--- a/bhoma/localsettings.py.example
+++ b/bhoma/localsettings.py.example
@@ -14,4 +14,16 @@ MEDIA_ROOT = r"C:\Users\bhoma\source\bhoma\bhoma\data\\"
 
 BHOMA_COUCH_SERVER   = "http://localhost:5984"
 BHOMA_COUCH_DATABASE_NAME = "patient"
+BHOMA_COUCH_DATABASE = "%(server)s/%(database)s" % \
+    {"server": BHOMA_COUCH_SERVER, "database": BHOMA_COUCH_DATABASE_NAME }
 BHOMA_CLINIC_ID = "CHANGE_ME"
+
+COUCHDB_DATABASES = (
+            ('bhoma.apps.case',        BHOMA_COUCH_DATABASE), 
+            ('bhoma.apps.encounter',   BHOMA_COUCH_DATABASE),
+            ('bhoma.apps.patient',     BHOMA_COUCH_DATABASE),
+            ('bhoma.apps.xforms',      BHOMA_COUCH_DATABASE),
+            ("bhoma.apps.djangocouch", BHOMA_COUCH_DATABASE),
+            ("bhoma.apps.profile",     BHOMA_COUCH_DATABASE),
+        )
+
