update paths in apache config to reflect instructions

--- a/bhoma/apache/apache-staging.conf
+++ b/bhoma/apache/apache-staging.conf
@@ -8,7 +8,7 @@
     WSGIApplicationGroup bhoma-staging
     WSGIPassAuthorization On
     
-    WSGIScriptAlias / /var/bhoma/bhoma/apache/project.wsgi/
+    WSGIScriptAlias / /var/src/bhoma/bhoma/apache/project.wsgi/
     
     <Location "/">
        Order Allow,Deny
@@ -20,7 +20,7 @@
     </Location>
     
     # static media for apps
-    Alias /static/patient /var/bhoma/bhoma/apps/patient/static
+    Alias /static/patient /var/src/bhoma/bhoma/apps/patient/static
     
     # Django admin media
     <Directory "/usr/lib/pymodules/python2.6/django/contrib/admin/media">
@@ -36,7 +36,7 @@
       SetHandler None
     </Location>
     
-    ErrorLog /var/log//bhoma.staging.error.log
+    ErrorLog /var/log/bhoma.staging.error.log
     LogLevel warn
     CustomLog /var/log/apache2/bhoma.staging.access.log combined
     
