--- a/bhoma/localsettings.py.example
+++ b/bhoma/localsettings.py.example
@@ -28,3 +28,4 @@ COUCHDB_DATABASES = (
             ("bhoma.apps.profile",     BHOMA_COUCH_DATABASE),
         )
 
+XFORMS_PLAYER_URL = "http://localhost:4444/"
