--- a/bhoma/localsettings.py.example
+++ b/bhoma/localsettings.py.example
@@ -31,3 +31,6 @@ BHOMA_CLINIC_ID = "CHANGE_ME" # change to your local clinic code: e.g. "5020280"
 
 # where your xforms player runs
 XFORMS_PLAYER_URL = "http://localhost:4444/"  
+
+# Uncomment this line for a district server
+# LOGIN_URL='/accounts/login/'
