--- a/bhoma/localsettings.py.example
+++ b/bhoma/localsettings.py.example
@@ -20,7 +20,7 @@ BHOMA_COUCH_USERNAME = ""
 BHOMA_COUCH_PASSWORD = ""
 
 # national database configuration - where this install syncs to
-BHOMA_NATIONAL_SERVER_ROOT = "bhoma.cidrz.org"
+BHOMA_NATIONAL_SERVER_ROOT = "bhoma.cidrz.org:5984"
 BHOMA_NATIONAL_DATABASE_NAME = "national"
 # If authentication is required, fill these in
 BHOMA_NATIONAL_USERNAME = ""
