--- a/bhoma/localsettings.py.example
+++ b/bhoma/localsettings.py.example
@@ -37,3 +37,14 @@ XFORMS_PLAYER_URL = "http://localhost:4444/"
 
 # Uncomment this line for a district server
 # LOGIN_URL='/accounts/login/'
+
+
+# email settings go here, if you want your server to be able to send emails
+EMAIL_HOST = "smtp.gmail.com"
+EMAIL_PORT = 587
+EMAIL_HOST_USER = "<your username>@gmail.com"
+EMAIL_HOST_PASSWORD = "<password>"
+EMAIL_USE_TLS = True
+
+# the default address that support emails go to
+BHOMA_SUPPORT_EMAIL = "yourname@project.com"
