serve all static media through the apache conf

--- a/bhoma/apache/apache-staging.conf
+++ b/bhoma/apache/apache-staging.conf
@@ -19,8 +19,15 @@
       SetHandler None
     </Location>
     
-    # static media for apps
+    # static media for webapp
+    Alias /static/webapp /var/src/bhomna/bhoma/apps/webapp/static
+    
+    # static media for other apps
+    Alias /static/couchlog /var/src/bhomna/bhoma/apps/couchlog/static
+    Alias /static/locations /var/src/bhomna/bhoma/apps/locations/static
     Alias /static/patient /var/src/bhoma/bhoma/apps/patient/static
+    Alias /static/reports /var/src/bhoma/bhoma/apps/reports/static
+    Alias /static/xforms /var/src/bhoma/bhoma/apps/xforms/static
     
     # Django admin media
     <Directory "/usr/lib/pymodules/python2.6/django/contrib/admin/media">
