--- a/bhoma/apache/apache-staging.conf
+++ b/bhoma/apache/apache-staging.conf
@@ -30,19 +30,19 @@
     Alias /static/xforms /var/src/bhoma/bhoma/apps/xforms/static
     
     # Django admin media
-    <Directory "/usr/lib/pymodules/python2.6/django/contrib/admin/media">
+    <Directory "/usr/local/lib/python2.6/dist-packages/Django-1.2.1-py2.6.egg/django/contrib/admin/media">
       Options Indexes FollowSymLinks MultiViews
       AllowOverride All
       Order allow,deny
       allow from all
     </Directory>
-    
-    Alias /admin-media /usr/lib/pymodules/python2.6/django/contrib/admin/media
-    
+
     <Location "/admin-media">
       SetHandler None
     </Location>
-    
+
+    Alias /admin-media /usr/local/lib/python2.6/dist-packages/Django-1.2.1-py2.6.egg/django/contrib/admin/media
+
     ErrorLog /var/log/bhoma.staging.error.log
     LogLevel warn
     CustomLog /var/log/apache2/bhoma.staging.access.log combined
