initial port of couchlog submodule refactoring.
- added submodule reference to couchlog
- moved existing bhoma couchlog to bhomalog
- used new couchlog signals to add the bhoma-specific properties
- updated tests

NOTE: still need to update views, logging references

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bhoma/submodules/dimagi-utils-src"]
 	path = bhoma/submodules/dimagi-utils-src
 	url = git://github.com/dimagi/dimagi-utils.git
+[submodule "bhoma/submodules/couchlog-src"]
+	path = bhoma/submodules/couchlog-src
+	url = git://github.com/dimagi/couchlog.git
