add commcare builds directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ bhoma/localsettings.py
 bhoma/scripts/localsshsettings.py
 bhoma/data/*
 bhoma/scripts/localsshsettings.py
+bhoma/mobile/builds/
 *~
 *.class
 *.db
