changed clinic_couch_config.ini to reflect what is on the clinics.
after consulting with cory, max_connections doesn't cause the 'too many
open files' bug, and will be left as is.

--- a/bhoma/sysconfig/clinic_couch_config.ini
+++ b/bhoma/sysconfig/clinic_couch_config.ini
@@ -13,11 +13,7 @@ delayed_commits = false
 [httpd]
 ;port = 5984
 bind_address = 0.0.0.0
-
-;lowering the max_connections limit may help with the 'too many open files'
-;problem. it is unclear if this is still necessary if the 'ulimit' fix is
-;also deployed. 2048 is the default; use something lower
-;max_connections = 2048
+max_connections = 200
 
 [log]
 ;level = debug
