--- a/bhoma/apache/apache-staging.conf
+++ b/bhoma/apache/apache-staging.conf
@@ -23,7 +23,7 @@
     Alias /static/webapp /var/src/bhoma/bhoma/apps/webapp/static
     
     # static media for other apps
-    Alias /static/couchlog /var/src/bhoma/bhoma/apps/couchlog/static
+    Alias /static/couchlog /var/src/bhoma/bhoma/submodules/couchlog-src/couchlog/static
     Alias /static/locations /var/src/bhoma/bhoma/apps/locations/static
     Alias /static/patient /var/src/bhoma/bhoma/apps/patient/static
     Alias /static/reports /var/src/bhoma/bhoma/apps/reports/static
@@ -43,7 +43,7 @@
 
     Alias /admin-media /usr/local/lib/python2.6/dist-packages/Django-1.2.1-py2.6.egg/django/contrib/admin/media
 
-    ErrorLog /var/log/bhoma.staging.error.log
+    ErrorLog /var/log/bhoma/apache.error.log
     LogLevel warn
     CustomLog /var/log/apache2/bhoma.staging.access.log combined
     
