add media_root to settings.py

--- a/bhoma/localsettings.py.example
+++ b/bhoma/localsettings.py.example
@@ -8,7 +8,7 @@ DATABASE_PASSWORD = ''         # Not used with sqlite3.
 DATABASE_HOST = ''             # Set to empty string for localhost. Not used with sqlite3.
 DATABASE_PORT = ''             # Set to empty string for default. Not used with sqlite3.
 
-MEDIA_ROOT = r"C:\Users\bhoma\source\bhoma\bhoma\data\\"
+#MEDIA_ROOT = r"C:\Users\bhoma\source\bhoma\bhoma\data\\"
 
 # Bhoma config
 
