clinic config changes

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ bhoma/scripts/localsshsettings.py
 bhoma/data/*
 bhoma/scripts/localsshsettings.py
 bhoma/mobile/builds/
+bhoma/staticroot/
 *~
 *.class
 *.db
