--- a/bhoma/apache/bhoma-clinic.conf
+++ b/bhoma/apache/bhoma-clinic.conf
@@ -7,6 +7,11 @@
     WSGIApplicationGroup bhoma-staging
     WSGIPassAuthorization On
     
+    # static media for our apps
+    Alias /static /var/src/bhoma/bhoma/staticroot
+
+    Alias /admin-media /usr/local/lib/python2.6/dist-packages/Django-1.2.1-py2.6.egg/django/contrib/admin/media
+
     WSGIScriptAlias / /var/src/bhoma/bhoma/apache/project.wsgi/
     
     <Location "/">
@@ -17,10 +22,6 @@
     <Location "/static">
       SetHandler None
     </Location>
-    
-    # static media for our apps
-    Alias /static/ /var/src/bhoma/bhoma/staticroot
-    
     
     # Django admin media
     <Directory "/usr/local/lib/python2.6/dist-packages/Django-1.2.1-py2.6.egg/django/contrib/admin/media">
@@ -33,8 +34,6 @@
     <Location "/admin-media">
       SetHandler None
     </Location>
-
-    Alias /admin-media /usr/local/lib/python2.6/dist-packages/Django-1.2.1-py2.6.egg/django/contrib/admin/media
 
     ErrorLog /var/log/bhoma/apache.error.log
     LogLevel warn
