--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/dimagi/couchexport.git
 [submodule "bhoma/submodules/django-soil"]
 	path = bhoma/submodules/django-soil
-	url = git://github.com/dimagi/django-soil.git
+	url = https://github.com/dimagi/django-soil.git
